// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginListItem should render 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-5"
          >
            <div
              class="PluginImage__PluginImageWrapper-iwox49-0 fITdNR"
              data-testid="PluginImage__placeholder"
            >
              <svg>
                plugin-logo-placeholder.svg
              </svg>
            </div>
            <div
              class="flex items-center space-x-2 text-left"
            >
              <span
                class="font-semibold link flex items-center space-x-2"
                data-testid="PluginListItem__link"
              >
                ARK Explorer
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
          >
            <span>
              ARK.io
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
          >
            <span>
              v1.3.8
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
          >
            <span>
              4.2 MB
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
          >
            <div
              class="flex justify-center items-center mx-auto w-6 h-6 text-theme-secondary-500"
              data-testid="PluginListItem__not-installed"
            >
              <div
                class="sc-bdfBwQ fPrsah"
                height="1em"
                width="1em"
              >
                <svg>
                  dash.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="w-16"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
          >
            <button
              class="Button__StyledButton-mdtvtf-0 iUSBMV flex-1"
              data-testid="PluginListItem__install"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                Install
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`PluginListItem should render grant icon 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-5"
          >
            <div
              class="PluginImage__PluginImageWrapper-iwox49-0 fITdNR"
              data-testid="PluginImage__placeholder"
            >
              <svg>
                plugin-logo-placeholder.svg
              </svg>
            </div>
            <div
              class="flex items-center space-x-2 text-left"
            >
              <span
                class="font-semibold link flex items-center space-x-2"
                data-testid="PluginListItem__link"
              >
                ARK Explorer
              </span>
              <div
                class="sc-bdfBwQ eMktAO"
                height="20"
                width="14"
              >
                <svg>
                  grant.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
          >
            <span>
              ARK.io
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
          >
            <span>
              v1.3.8
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
          >
            <span>
              4.2 MB
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
          >
            <div
              class="flex justify-center items-center mx-auto w-6 h-6 text-theme-secondary-500"
              data-testid="PluginListItem__not-installed"
            >
              <div
                class="sc-bdfBwQ fPrsah"
                height="1em"
                width="1em"
              >
                <svg>
                  dash.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="w-16"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
          >
            <button
              class="Button__StyledButton-mdtvtf-0 iUSBMV flex-1"
              data-testid="PluginListItem__install"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                Install
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`PluginListItem should render official icon 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-5"
          >
            <div
              class="PluginImage__PluginImageWrapper-iwox49-0 fITdNR"
              data-testid="PluginImage__placeholder"
            >
              <svg>
                plugin-logo-placeholder.svg
              </svg>
            </div>
            <div
              class="flex items-center space-x-2 text-left"
            >
              <span
                class="font-semibold link flex items-center space-x-2"
                data-testid="PluginListItem__link"
              >
                ARK Explorer
              </span>
              <div
                class="sc-bdfBwQ iNulIV"
                height="18"
                width="18"
              >
                <svg>
                  official-ark-plugin.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
          >
            <span>
              ARK.io
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
          >
            <span>
              v1.3.8
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
          >
            <span>
              4.2 MB
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
          >
            <div
              class="flex justify-center items-center mx-auto w-6 h-6 text-theme-secondary-500"
              data-testid="PluginListItem__not-installed"
            >
              <div
                class="sc-bdfBwQ fPrsah"
                height="1em"
                width="1em"
              >
                <svg>
                  dash.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="w-16"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
          >
            <button
              class="Button__StyledButton-mdtvtf-0 iUSBMV flex-1"
              data-testid="PluginListItem__install"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                Install
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`PluginListItem should trigger install 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-5"
          >
            <div
              class="PluginImage__PluginImageWrapper-iwox49-0 fITdNR"
              data-testid="PluginImage__placeholder"
            >
              <svg>
                plugin-logo-placeholder.svg
              </svg>
            </div>
            <div
              class="flex items-center space-x-2 text-left"
            >
              <span
                class="font-semibold link flex items-center space-x-2"
                data-testid="PluginListItem__link"
              >
                ARK Explorer
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
          >
            <span>
              ARK.io
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
          >
            <span>
              v1.3.8
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
          >
            <span>
              4.2 MB
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
          >
            <div
              class="flex justify-center items-center mx-auto w-6 h-6 text-theme-secondary-500"
              data-testid="PluginListItem__not-installed"
            >
              <div
                class="sc-bdfBwQ fPrsah"
                height="1em"
                width="1em"
              >
                <svg>
                  dash.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="w-16"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
          >
            <button
              class="Button__StyledButton-mdtvtf-0 iUSBMV flex-1"
              data-testid="PluginListItem__install"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                Install
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
